added CategoryCard component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@components": ["src/components"],
       "@icons": ["src/assets/icons"],
+      "@types": ["src/types"],
     }
   }
 }
