--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "@components": ["src/components"],
       "@icons": ["src/assets/icons"],
       "@types": ["src/types"],
+      "@pages": ["src/pages"],
     }
   }
 }
