--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-masked-view/masked-view": "^0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
@@ -20,6 +21,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^13.14.0",
     "react-native-swiper": "^1.6.0",
     "react-redux": "^8.1.3",
