--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^13.14.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-webview": "^13.6.2",
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0"
   },
